--- a/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/test-modeler-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/appplatform/armappplatform/__debug/test-modeler-pre.yaml
@@ -9885,9 +9885,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: ListBySubscription
-            description: |-
-              Handles requests to list all resources in a subscription.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Handles requests to list all resources in a subscription.
             azureARM: true
             clientName: ServicesClient
             openApiType: arm
@@ -10085,9 +10083,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              Handles requests to list all resources in a resource group.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Handles requests to list all resources in a resource group.
             azureARM: true
             clientName: ServicesClient
             openApiType: arm
@@ -13123,9 +13119,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              Handles requests to list all resources in a Service.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Handles requests to list all resources in a Service.
             azureARM: true
             clientName: AppsClient
             openApiType: arm
@@ -14889,9 +14883,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              Handles requests to list all resources in an App.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Handles requests to list all resources in an App.
             azureARM: true
             clientName: BindingsClient
             openApiType: arm
@@ -15854,9 +15846,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              List all the certificates of one user.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: List all the certificates of one user.
             azureARM: true
             clientName: CertificatesClient
             openApiType: arm
@@ -17132,9 +17122,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              List the custom domains of one lifecycle application.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: List the custom domains of one lifecycle application.
             azureARM: true
             clientName: CustomDomainsClient
             openApiType: arm
@@ -18620,9 +18608,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              Handles requests to list all resources in an App.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Handles requests to list all resources in an App.
             azureARM: true
             clientName: DeploymentsClient
             openApiType: arm
@@ -18853,9 +18839,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: ListForCluster
-            description: |-
-              List deployments for a certain service
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: List deployments for a certain service
             azureARM: true
             clientName: DeploymentsClient
             openApiType: arm
@@ -19905,9 +19889,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              Lists all of the available REST API operations of the Microsoft.AppPlatform provider.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Lists all of the available REST API operations of the Microsoft.AppPlatform provider.
             azureARM: true
             clientName: OperationsClient
             openApiType: arm
@@ -20237,9 +20219,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              Lists all of the available skus of the Microsoft.AppPlatform provider.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Lists all of the available skus of the Microsoft.AppPlatform provider.
             azureARM: true
             clientName: SKUsClient
             openApiType: arm
