--- a/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/test-modeler-pre.yaml
+++ b/packages/autorest.gotest/test/integrationtest/output/signalr/armsignalr/__debug/test-modeler-pre.yaml
@@ -5101,9 +5101,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              Lists all of the available REST API operations of the Microsoft.SignalRService provider.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Lists all of the available REST API operations of the Microsoft.SignalRService provider.
             azureARM: true
             clientName: OperationsClient
             openApiType: arm
@@ -5527,9 +5525,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: ListBySubscription
-            description: |-
-              Handles requests to list all resources in a subscription.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Handles requests to list all resources in a subscription.
             azureARM: true
             clientName: Client
             openApiType: arm
@@ -5774,9 +5770,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: ListByResourceGroup
-            description: |-
-              Handles requests to list all resources in a resource group.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Handles requests to list all resources in a resource group.
             azureARM: true
             clientName: Client
             openApiType: arm
@@ -7845,9 +7839,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              List resource usage quotas by location.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: List resource usage quotas by location.
             azureARM: true
             clientName: UsagesClient
             openApiType: arm
@@ -8059,9 +8051,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              List private endpoint connections
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: List private endpoint connections
             azureARM: true
             clientName: PrivateEndpointConnectionsClient
             openApiType: arm
@@ -8943,9 +8933,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              Get the private link resources that need to be created for a resource.
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: Get the private link resources that need to be created for a resource.
             azureARM: true
             clientName: PrivateLinkResourcesClient
             openApiType: arm
@@ -9148,9 +9136,7 @@ operationGroups:
               nextLinkName: nextLink
           go:
             name: List
-            description: |-
-              List shared private link resources
-              If the operation fails it returns an *azcore.ResponseError type.
+            description: List shared private link resources
             azureARM: true
             clientName: SharedPrivateLinkResourcesClient
             openApiType: arm
